# pwm-signal-generator

./: .gitignore  README.md  run_simulator.bat
ALIENTEK MINISTM32 实验9 输入捕获实验 -20250515/HARDWARE/APP/: fg_capture.h  menu.h  menu_defs.h  protocol.c  protocol.h  pwm_engine.c  pwm_engine.h  system_config.h
ALIENTEK MINISTM32 实验9 输入捕获实验 -20250515/HARDWARE/DAC/: dac.c
ALIENTEK MINISTM32 实验9 输入捕获实验 -20250515/HARDWARE/Encoder/: Encoder.c  Encoder.h
ALIENTEK MINISTM32 实验9 输入捕获实验 -20250515/HARDWARE/KEY/: key.c
ALIENTEK MINISTM32 实验9 输入捕获实验 -20250515/HARDWARE/LCD/: lcd.c
ALIENTEK MINISTM32 实验9 输入捕获实验 -20250515/HARDWARE/LED/: led.h
ALIENTEK MINISTM32 实验9 输入捕获实验 -20250515/HARDWARE/MPU6050/: mpu6050.h
ALIENTEK MINISTM32 实验9 输入捕获实验 -20250515/HARDWARE/OLED_IIC/: menu.c  oled.c  oled.h  oled_show.c  oled_show.h
ALIENTEK MINISTM32 实验9 输入捕获实验 -20250515/HARDWARE/TIMER/: timer.c  (+1 more)
ALIENTEK MINISTM32 实验9 输入捕获实验 -20250515/USER/: ICAPTURE.uvprojx  JLinkLog.txt  PWM信号发生器.uvprojx
STM32固件/USER/: main.c  stm32f10x_it.c
common/: menu_fsm.h  protocol_crc.c  protocol_defs.h
firmware/Core/: encoder.c  encoder.h  fg_capture.c  fg_capture.h  main.c  menu.c  menu.h  oled_ssd1306.c  oled_ssd1306.h  protocol.c  protocol.h  pwm_engine.c  pwm_engine.h  system_config.h  ui_render.c  ui_render.h
hardware/: BOM.md  architecture.md  expansion_board.md  schematic.md
simulator/: CMakeLists.txt  keymap.cpp  keymap.h  main.cpp  mainwindow.cpp  mainwindow.h  menuengine.cpp  menuengine.h  oledwidget.cpp  oledwidget.h  protocol.cpp  protocol.h  run_simulator.py  serialcomm.cpp  serialcomm.h
(+27 files in other folders)
